# GMRebuildApr2025

./: .env.example  .gitignore  .replit  .replit.nix  .replit.workflow  .replit.workflow-admin  .replit.workflow-admin-app  .replit.workflow-admin-check  .replit.workflow-admin-dashboard  .replit.workflow-admin-run  .replit.workflow-admin-test  .replit.workflow-admindashboard  .replit.workflow-app-admin  .replit.workflow-minimal-admin  .replit.workflow-simple-admin  .replit.workflow.app  .replit.workflow.test_affiliate  .replit.workflow.yml  .startup_cache.json  .workflow  ADMIN_README.md  AUTOSCALING_REFACTOR_SUMMARY.md  FINAL_OPTIMIZATION_SUMMARY.md  METADATA_ISSUE_FIXES.md  MOBILE_IMPROVEMENTS.md  MOBILE_TEXT_INPUT_FIX.md  MOBILE_UI_IMPROVEMENTS.md  OPENROUTER_FIX_README.md  PDF_ATTACHMENT_FIX.md  PDF_COLORS_AND_JS_FIX.md  PDF_FILENAME_DISPLAY_FIX.md  PDF_SUPPORT_README.md  PDF_UPLOAD_INDICATOR.md  PERFORMANCE_IMPROVEMENTS.md  Procfile  RAG_ANNOTATIONS_README.md  README.md  REPLIT_DEPLOYMENT_GUIDE.md  SIMPLIFIED_AFFILIATE_SYSTEM.md  add_document_models.py  (+545 more)
attached_assets/: Pasted--Enhance-the-chatbot-interface-by-adding-action-buttons-and-metadata-below-user-and-AI-messages--1744782191409.txt  Pasted--The-chatbot-is-still-experiencing-message-truncation-and-missing-metadata-even-though-the-app-py-a-1744785321469.txt  Pasted-Aim-Modify-the-Flask-backend-app-py-main-py-to-automatically-generate-a-short-descriptive-title--1744800432013.txt  Pasted-Correct-the-app-py-file-to-fix-message-truncation-and-missing-metadata-issues-by-re-inserting-the-ne-1744784556302.txt  (+13 more)
(+290 files in other folders)
