[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask[async]>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn[uvicorn]>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "pymongo>=4.12.0",
    "openai>=1.74.0",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.34.1",
    "gevent>=24.11.1",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.13.4",
    "pyyaml>=6.0.2",
    "striprtf>=0.0.29",
    "lxml>=5.3.2",
    "pypdf>=5.4.0",
    "pillow>=11.2.1",
]
